--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ footer {
     position: fixed; width: 100%; bottom: 0; 
 }
 img {
-    border-radius:10px
+    border-radius:10px;
     height:200px;
 }
 
